[gd_scene load_steps=5 format=3 uid="uid://c3t73df83nwj2"]

[ext_resource type="Script" path="res://GeneralUIScripts/GameOverScreen.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ckavx8phe8wpf" path="res://Resources/Graphics/GeneralUI/gameover_alt.png" id="2"]
[ext_resource type="Theme" uid="uid://dvwt0gddw54iw" path="res://VNTheme.tres" id="3"]
[ext_resource type="Material" uid="uid://3tb8733jaxk6" path="res://Resources/AlphaScissor.tres" id="4"]

[node name="GameOverScreen" type="TextureRect"]
process_mode = 3
offset_right = 1200.0
offset_bottom = 675.0
texture = ExtResource("2")
expand_mode = 1
script = ExtResource("1")

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 351.0
offset_right = 1191.0
offset_bottom = 672.0
size_flags_vertical = 3
theme_override_constants/separation = 7

[node name="RestartButton" type="Button" parent="ButtonContainer"]
material = ExtResource("4")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3")
text = "New Game"
expand_icon = true

[node name="QuitButton" type="Button" parent="ButtonContainer"]
material = ExtResource("4")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3")
text = "Quit"
expand_icon = true

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="gui_input" from="." to="." method="_on_GameOverScreen_gui_input"]
[connection signal="pressed" from="ButtonContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="ButtonContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
